manifests/todo/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: todo
  ports:
    - name: http
      port: 3456
      targetPort: http
